# glob-tries

./: .pre-commit-config.yaml  CONTRIBUTING.md  pyproject.toml
tests/: test_tries.py
