[tool.poetry]
name = "glob_tries"
version = "1.0.2"
description = "Utilities for efficient glob matching using tries"
authors = ["Zack Robinson <zachary.robinson@arcesium.com>"]
packages = [{ include = "glob_tries", from = "src" }]
readme = "README.md"
repository = "https://github.com/arcesium/glob-tries"
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.9.0"
mypy = "^1.18.2"
flake8 = "^7.3.0"
coverage = "^7.10.6"
pytest = "^8.4.2"
pre-commit = "^4.3.0"
bandit = "^1.8.6"

[[tool.poetry.source]]
name = "PyPI"
priority = "primary"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
multi_line_output = 3
src_paths = ["src/glob_tries", "tests"]
line_length = 80

[tool.bandit]
[tool.bandit.assert_used]
skips = ["*/*_test.py", "*/test_*.py"]


[tool.coverage.run]
omit = ["tests/*", ".*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
